--- a/AkariFramework/Assets/GameMain/Scripts/Runtime/Akari.Runtime.asmdef
+++ b/AkariFramework/Assets/GameMain/Scripts/Runtime/Akari.Runtime.asmdef
@@ -1,7 +1,7 @@
 {
     "name": "Akari.Runtime",
     "references": [
-        "VEngine"
+        "Unity.ThirdParty"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
